Uniform with code from DockIcon so that also the standard Recycler may finally unmount volumes!
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37474 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-12-18 Riccardo Mottola <rm@gnu.org>
+
+	* Recycler/RecyclerIcon.m
+	Uniform with code from DockIcon so that also the standard Recycler may finally unmount volumes!
+
 2013-12-12 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.h
