--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-30 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNIcon.m
+	Try to guess the best of [NSHost names] and not just name.
+
 2013-12-18 Riccardo Mottola <rm@gnu.org>
 
 	* Recycler/RecyclerIcon.m
