Extend thread fix to Trash, move, link, duplicate.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@38073 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2014-09-10 Riccardo Mottola <rm@gnu.org>
 
+	* Operation/FileOpInfo.m
+	Extend thread fix to Trash, move, link, duplicate.
+
+2014-09-10 Riccardo Mottola <rm@gnu.org>
+
 	* Operation/FileOpInfo.h
 	* Operation/FileOpInfo.m
 	Store information about operation and processed file in the caller, re-detach the operation executor thread when resuming from pause. Fix doCopy pause/resume this way.
