--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-10-21 Riccardo Mottola <rm@gnu.org>
+
+	* Operation/FileOpInfo.h
+	Match protocol to actual class, making endOperation synchronous.
+
+	* Operation/FileOpInfo.m
+	Cleanup NSConnectionDidDieNotification when thread exits, other clean ups.
+
 2014-10-13 18:58-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Operation/FileOpInfo.m: Set executor to nil when thread
