--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-11-16 Riccardo Mottola <rm@gnu.org>
+
+	* Operation/FileOpInfo.m
+	Set root object to nil, fixes memory leak of FileOpInfo itself.
+
 2014-09-22 Riccardo Mottola <rm@gnu.org>
 
 	* Operation/FileOpInfo.h
