--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-29 Riccardo Mottola <rm@gnu.org>
+
+	* Operation/Operation.m (rectForFileOpWindow)
+	Fix off-by-one array access, return NSZeroRect immediately if no other operations are running.
+
 2014-11-16 Riccardo Mottola <rm@gnu.org>
 
 	* Operation/FileOpInfo.m
