--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-05-26 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/fswatcher/fswatcher-inotify.h
+	Use linux inotify, as suggested by Adrian Bunk
+
+	* Tools/fswatcher/local_inotify.h
+	* Tools/fswatcher/local_inotify_syscalls.h
+	Deleted local copy
+
 2015-05-12 Riccardo Mottola <rm@gnu.org>
 
 	* configure.ac
