Cleanup and implement --auto and --daemon like fswatcher.m
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@38546 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2015-05-26 Riccardo Mottola <rm@gnu.org>
 
 	* Tools/fswatcher/fswatcher-inotify.h
+	* Tools/fswatcher/fswatcher-inotify.m
+	Cleanup and implement --auto and --daemon like fswatcher.m
+
+2015-05-26 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/fswatcher/fswatcher-inotify.h
 	Use linux inotify, as suggested by Adrian Bunk
 
 	* Tools/fswatcher/local_inotify.h
