Verify and protect certain directories from file operations.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@38563 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2015-05-26 Riccardo Mottola <rm@gnu.org>
 
+	* Operation/Operation.m
+	* Operation/Resources/English.lproj/Localizable.strings
+	Verify and protect certain directories from file operations.
+
+2015-05-26 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/FileViewer/GWViewer.m
 	Regenerate and propagate selection on windows key change, even if it did not change inside the viewer.
 
@@ -495,7 +501,6 @@
 	* FSNode/FSNIconsView.h
 	* FSNode/FSNListView.h
 	Fix warnings about not implemented protocols.
-
 2013-02-28 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/gmds/gmds/gmds.m
