Add check for sys/resource.h
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@38991 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+	2015-09-16 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/config.h.in
+	* GWorkspace/configure
+	* GWorkspace/configure.ac
+	Add check for sys/resource.h
+
 2015-05-26 Riccardo Mottola <rm@gnu.org>
 
 	* Operation/Operation.m
