Remove unused variable
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39054 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-10-12 Riccardo Mottola <rm@gnu.org>
+
+	* Operation/Operation.m
+	Remove unused variable.
+
 2015-09-16 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
