Use fabsf() with float argument
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39073 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-10-15 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNIconsView.m
+	Use fabsf() with float argument
+
 2015-10-12 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewersManager.m (viewerForNode)
