--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-10-16 Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/ContentViewers/ImageViewer/resizer/Resizer.m
+	Fix resize nearest neigbour algorithm by adapting PRICE's scale one. The code had problems with different bytes per samples and alpha, which are now preserved.
+
 2015-10-15 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNIconsView.m
