Moved thumbnailer from Tools to GWorkspace
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39152 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-11-05 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/thumbnailer
+	* GWorkspace/Thumbnailer
+	Moved thumbnailer from Tools to GWorkspace.
+
 2015-11-02 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
