Simplify parameters for direct call
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39158 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2015-11-06 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/FileViewer/GWViewer.m
+	* GWorkspace/Thumbnailer/GWThumbnailer.h
+	* GWorkspace/Thumbnailer/GWThumbnailer.m
+	Simplify parameters for direct call.
+
+2015-11-06 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/FileViewer/GWViewer.h
 	* GWorkspace/FileViewer/GWViewer.m
 	* GWorkspace/Thumbnailer/GWThumbnailer.h
