--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2015-11-07 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Thumbnailer/GWThumbnailer.h
+	* GWorkspace/Thumbnailer/GWThumbnailer.m
+	Define maximum icon size to 64.
+	
+	* GWorkspace/Thumbnailer/ImageThumbnailer/GNUmakefile.preamble
+	* GWorkspace/Thumbnailer/ImageThumbnailer/ImageThumbnailer.h
+	* GWorkspace/Thumbnailer/ImageThumbnailer/ImageThumbnailer.m
+	Cleanup header import and protocol redefinition.
+
 2015-11-06 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewer.m
