Use pathForImageResource: instead of pathForResource
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39179 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+2015-11-18  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.m
+	Use pathForImageResource: instead of pathForResource
+
 2015-11-07 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Thumbnailer/GWThumbnailer.h
 	* GWorkspace/Thumbnailer/GWThumbnailer.m
 	Define maximum icon size to 64.
-	
+
 	* GWorkspace/Thumbnailer/ImageThumbnailer/GNUmakefile.preamble
 	* GWorkspace/Thumbnailer/ImageThumbnailer/ImageThumbnailer.h
 	* GWorkspace/Thumbnailer/ImageThumbnailer/ImageThumbnailer.m
