Use constants for common images from GNUstep, do not provide those icons.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39184 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-11-19  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.m
+	Use constants for common images from GNUstep, do not provide those icons.
+
 2015-11-18  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
