--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-12-02 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Thumbnailer/GWThumbnailer.h
+	* GWorkspace/Thumbnailer/GWThumbnailer.m
+	* GWorkspace/FileViewer/GWViewer.m
+	Make the thumbnailer a (releasable) singleton and instantiate it through sharedThumbnailer. It may be released, but if it exists, it is a singleton.
+
 2015-11-19  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
