--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-12-04 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Thumbnailer/GWThumbnailer.h
+	* GWorkspace/Thumbnailer/GWThumbnailer.m (writeDictToFile)
+	Lock critical section.
+
 2015-12-03 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.h
