--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-01-05 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/FileViewer/GWViewersManager.m
+	count loops to NSUInteger
+
 2016-01-01 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.h
