--- a/GWorkspace/Resources/French.lproj/Localizable.strings
+++ b/GWorkspace/Resources/French.lproj/Localizable.strings
@@ -181,7 +181,7 @@
 "Changed" = "Modifié";
 "Revert" = "Revenir";
 "OK" = "Ok";
-
+"also apply to files inside selection" = "Appliquer aux sous-dossiers";
 
 /* ContentsPanel.m */
 
