add missing localizable string
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39257 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -69,6 +69,7 @@
 		"Go backward" = "Go backward";
 		"Go forward" = "Go forward";
 	"Show Desktop" = "Show Desktop";
+        "Hide Desktop" = "Hide Desktop";
 	"Show Recycler" = "Show Recycler";
 	"Check for disks" = "Check for disks";
 	
