--- a/GWorkspace/Resources/German.lproj/Localizable.strings
+++ b/GWorkspace/Resources/German.lproj/Localizable.strings
@@ -187,7 +187,7 @@ which ends in "kann <the file> nicht umbenennen"
 "Attributes" = "Attribute";
 "Attributes Inspector" = "Attribut-Inspektor";
 "Path:" = "Pfad:";
-"Link To:" = "Link zu:";
+"Link to:" = "Verweis zu:";
 "Size:" = "Größe:";
 "Calculate" = "Berechnen";
 "Owner:" = "Besitzer:";
