more french translations by Bertrand
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39266 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -159,7 +159,20 @@
 "Invalid char in name" = "Invalid character in name";
 
 
-/* ----------------------- Inspectors strings --------------------------- *\
+/* ----------------------------- Viewers Strings ----------------------------- *\
+
+/* GWViewer.m */
+"free" = "free";
+
+/* GWViewersManager.m */
+
+"Are you sure you want to open" = "Are you sure you want to open";
+"items?" = "items?";
+"error" = "error";
+"Can't open " = "Can't open ";
+
+
+/* ---------------------------- Inspectors strings --------------------------- *\
 
 /* InspectorsWin.m */
 
