Improve translation of Desktop Preference, move items, add strings
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39272 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -383,6 +383,7 @@
 "Background"="Background";
 "General"="General";
 
+"Color:" = "Color:";
 "center" = "Center";
 "fit" = "Fit";
 "tile" = "Tile";
@@ -391,15 +392,16 @@
 "Use image"="Use image";
 "Choose"="Choose";
 
+"Dock" = "Dock";
 "Show Dock"="Show Dock";
-"Dock position:"="Dock position:";
+"Position:"="Position:";
 
+"Style:"="Style:";
 "Left"="Left";
 "Right"="Right";
-
-"Dock style:"="Dock style:";
 
 "Classic"="Classic";
 "Modern"="Modern";
 
+"Omnipresent"="Omnipresent";
 "Autohide Tabbed Shelf"="Autohide Tabbed Shelf";
